--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -31,4 +31,10 @@
         <attr name="pivotY" format="fraction" />
     </declare-styleable>
 
+    <declare-styleable name="MarqueeView">
+        <attr name="speed" format="integer"/>
+        <attr name="pause" format="integer"/>
+        <attr name="autoStart" format="boolean"/>
+    </declare-styleable>
+
 </resources>
