test blurry lib

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -66,6 +66,7 @@
         <item>com.dmio.org.tut.activity.demo.security.ca.SecurityCAActivity</item>
         <item>com.dmio.org.tut.activity.guide.GuideMainActivity</item>
         <item>com.dmio.org.tut.activity.demo.widget.swipecard.SwipeCardActivity</item>
+        <item>com.dmio.org.tut.activity.demo.widget.blurry.BlurryActivity</item>
     </string-array>
 
 </resources>
