--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,11 @@
 <resources>
+
+    <dimen name="t1">12sp</dimen>
+    <dimen name="t2">14sp</dimen>
+    <dimen name="t3">18sp</dimen>
+    <dimen name="t4">24sp</dimen>
+    <dimen name="t5">32sp</dimen>
+
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
