encapsulate moxie api to parse some orders info.

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -67,6 +67,7 @@
         <item>com.dmio.org.tut.activity.guide.GuideMainActivity</item>
         <item>com.dmio.org.tut.activity.demo.widget.swipecard.SwipeCardActivity</item>
         <item>com.dmio.org.tut.activity.demo.widget.blurry.BlurryActivity</item>
+        <item>com.dmio.org.tut.activity.demo.moxie.MoxieActivity</item>
     </string-array>
 
 </resources>
