--- a/app/src/main/res/layout/activity_moxie.xml
+++ b/app/src/main/res/layout/activity_moxie.xml
@@ -16,6 +16,21 @@
         android:layout_marginTop="30dp"
         android:background="@color/gray_btn_bg_color"
         android:text="email"
+        app:layout_constraintHorizontal_bias="0.154"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_func_id_verify"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="30dp"
+        android:background="@color/gray_btn_bg_color"
+        android:text="id_verify"
+        app:layout_constraintHorizontal_bias="0.846"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
