--- a/app/src/main/res/layout/activity_moxie.xml
+++ b/app/src/main/res/layout/activity_moxie.xml
@@ -42,6 +42,8 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="20dp"
+        android:padding="10dp"
+        android:textColor="@color/c1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_func_email" />
