--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,4 +27,7 @@
     <dimen name="welcome_content_min_height">96.0dip</dimen>
     <dimen name="welcome_content">16.0sp</dimen>
 
+    <item name="animDuration" type="integer">@android:integer/config_mediumAnimTime</item>
+    <integer name="animation_default_duration">@integer/animDuration</integer>
+
 </resources>
