--- a/app/src/main/res/layout/list_recycler_view_item.xml
+++ b/app/src/main/res/layout/list_recycler_view_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/c8">
@@ -9,8 +8,8 @@
 
     <ImageView
         android:id="@+id/iv_portrait"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginLeft="5dp"
@@ -32,12 +31,9 @@
         android:layout_marginTop="5dp"
         android:ellipsize="end"
         android:maxLines="10"
-        android:shadowColor="@color/c5"
-        android:shadowDx="10"
-        android:shadowDy="10"
-        android:shadowRadius="10"
-        android:textColor="@color/c4"
-        android:textSize="@dimen/ts4"
+        android:textColor="@color/c5"
+        android:textSize="@dimen/ts6"
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/iv_portrait"
