update architech and add flipper view

--- a/app/src/main/res/layout/list_main_item.xml
+++ b/app/src/main/res/layout/list_main_item.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -10,8 +12,20 @@
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
         android:gravity="center"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:textColor="@color/c4"
+        android:textSize="@dimen/ts4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:text="text"/>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0.5dp"
+        android:background="@color/c6"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_title"/>
 
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
