--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,21 +1,5 @@
+<?xml version="1.0" encoding="utf-8" ?>
 <resources>
-
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/base_colorPrimary</item>
-        <item name="colorPrimaryDark">@color/base_colorPrimaryDark</item>
-        <item name="colorAccent">@color/base_colorAccent</item>
-        <item name="windowActionBar">false</item>
-        <item name="android:windowNoTitle">true</item>
-    </style>
-
 
     <!--SweetAlert -->
     <style name="sweet_alert_dialog" parent="android:Theme.Dialog">
