--- a/app/src/main/res/layout/list_recycler_view_item.xml
+++ b/app/src/main/res/layout/list_recycler_view_item.xml
@@ -21,7 +21,7 @@
 
     <TextView
         android:id="@+id/tv_desc"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:layout_marginEnd="5dp"
