--- a/core/src/main/res/layout/common_toolbar.xml
+++ b/core/src/main/res/layout/common_toolbar.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:actionBarNavMode="standard">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -12,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/c1"
+            android:elevation="4dp"
             android:minHeight="?attr/actionBarSize"
             app:layout_scrollFlags="scroll|enterAlways"
             app:navigationIcon="?attr/homeAsUpIndicator"
@@ -22,3 +25,4 @@
     </android.support.design.widget.AppBarLayout>
 
 </merge>
+
