--- a/view/src/main/res/values/dimens.xml
+++ b/view/src/main/res/values/dimens.xml
@@ -1,6 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <item name="animDuration" type="integer">@android:integer/config_mediumAnimTime</item>
     <integer name="animation_default_duration">@integer/animDuration</integer>
-
 </resources>
