--- a/app/src/main/res/layout/activity_list_recycler_view_footer.xml
+++ b/app/src/main/res/layout/activity_list_recycler_view_footer.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/list_load_more_tip"
         android:textColor="@color/c5"
-        android:textSize="@dimen/ts5"
+        android:textSize="@dimen/t5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="parent" />
