--- a/view/src/main/res/values/attrs.xml
+++ b/view/src/main/res/values/attrs.xml
@@ -5,6 +5,24 @@
     <declare-styleable name="CircleTextProgressbar">
         <attr name="in_circle_color" format="color"/>
     </declare-styleable>
+    <!-- Wheel -->
+    <declare-styleable name="ProgressWheel">
+        <attr name="pwText" format="string" />
+        <attr name="pwTextColor" format="color" />
+        <attr name="pwTextSize" format="dimension" />
+        <attr name="pwBarColor" format="color" />
+        <attr name="pwRimColor" format="color" />
+        <attr name="pwRimWidth" format="dimension" />
+        <attr name="pwSpinSpeed" format="dimension" />
+        <attr name="pwDelayMillis" format="integer" />
+        <attr name="pwCircleColor" format="color" />
+        <attr name="pwRadius" format="dimension" />
+        <attr name="pwBarWidth" format="dimension" />
+        <attr name="pwBarLength" format="dimension" />
+        <attr name="pwContourColor" format="color"/>
+        <attr name="pwContourSize" format="dimension"/>
+    </declare-styleable>
+
 
     <!-- TextView -->
     <!-- FlipperTextView -->
@@ -16,4 +34,5 @@
         <attr name="textSize" format="dimension"/>
         <attr name="textSingleLine" format="boolean"/>
     </declare-styleable>
+
 </resources>
