--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/c7"
     android:gravity="center"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:background="@color/c7"
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <!-- Login progress -->
@@ -27,13 +27,13 @@
         android:layout_marginBottom="15dp"
         android:layout_marginTop="5dp"
         android:background="@color/c7"
-        app:deletable="true"
         android:visibility="gone"
-        app:flipBackgroundColor="@color/c7"
-        app:flipInterval="2000"
-        app:textSingleLine="true"
-        app:textColor="@color/c1"
-        app:textSize="@dimen/t4"/>
+        app:deletable="true"
+        app:flip_background_color="@color/c7"
+        app:flip_interval="2000"
+        app:text_color="@color/c1"
+        app:text_single_line="true"
+        app:text_size="@dimen/t4"/>
 
     <ScrollView
         android:id="@+id/login_form"
