--- a/core/src/main/res/layout/vdp_toolbar.xml
+++ b/core/src/main/res/layout/vdp_toolbar.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/c9"
+        android:background="@color/colorPrimary"
         android:elevation="4dp"
         android:fitsSystemWindows="true"
         android:minHeight="?attr/actionBarSize"
