--- a/core/src/main/res/layout/vdp_toolbar.xml
+++ b/core/src/main/res/layout/vdp_toolbar.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.AppBarLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fitsSystemWindows="true">
@@ -14,13 +15,24 @@
         android:elevation="4dp"
         android:fitsSystemWindows="true"
         android:minHeight="?attr/actionBarSize"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
         android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:titleTextColor="@color/c8"
-        android:title="hello world"
-        app:title="goodbye world"
         app:layout_scrollFlags="scroll|enterAlways"
         app:navigationIcon="?attr/homeAsUpIndicator"
         app:theme="@style/Theme.AppCompat.NoActionBar">
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/tv_title"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:ellipsize="end"
+            android:lines="1"
+            android:titleTextColor="@color/c8"
+            tools:text="center text"/>
 
     </android.support.v7.widget.Toolbar>
 </android.support.design.widget.AppBarLayout>
