menu action style

--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#3f51b5</color>
+    <color name="colorPrimaryDark">#002984</color>
     <color name="colorAccent">#FF4081</color>
 
     <color name="c1">#2084d3</color>
@@ -18,3 +18,4 @@
     <color name="c12">#f2f2f2</color>
 
 </resources>
+
