--- a/core/src/main/res/layout/vdp_container.xml
+++ b/core/src/main/res/layout/vdp_container.xml
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cl_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="vertical">
 
-    <include layout="@layout/vdp_toolbar"/>
+    <include
+        layout="@layout/vdp_toolbar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
-    <com.noo.core.widget.msv.MultiStateView
+    <com.noo.core.ui.msv.MultiStateView
         android:id="@+id/msv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appbar"
         app:msv_animateViewChanges="true"
         app:msv_emptyView="@layout/msv_empty"
         app:msv_errorView="@layout/msv_error"
         app:msv_loadingView="@layout/msv_loading"
         app:msv_viewState="content">
 
-    </com.noo.core.widget.msv.MultiStateView>
+    </com.noo.core.ui.msv.MultiStateView>
 
-</android.support.design.widget.CoordinatorLayout>
+</android.support.constraint.ConstraintLayout>
