--- a/app/src/main/res/layout/list_main_item.xml
+++ b/app/src/main/res/layout/list_main_item.xml
@@ -5,27 +5,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
-        android:gravity="center"
         android:padding="10dp"
         android:textColor="@color/c4"
         android:textSize="@dimen/t4"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         tools:text="text"/>
 
     <View
         android:layout_width="0dp"
         android:layout_height="0.5dp"
-        android:background="@color/c6"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_title"/>
+        android:background="@color/c6"/>
 
 
 </android.support.constraint.ConstraintLayout>
