--- a/core/src/main/res/layout/msv_unknown.xml
+++ b/core/src/main/res/layout/msv_unknown.xml
@@ -30,12 +30,12 @@
         android:textStyle="bold"/>
 
     <Button
-        android:id="@+id/tap_to_retry"
+        android:id="@+id/btn_retry"
         style="@style/Button.Retry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="false"
         android:duplicateParentState="true"
-        android:text="@string/msv_tap_to_retry"/>
+        android:text="@string/msv_retry"/>
 
 </LinearLayout>
