--- a/core/src/main/res/layout/vdp_toolbar.xml
+++ b/core/src/main/res/layout/vdp_toolbar.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/appbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fitsSystemWindows="true">
@@ -10,13 +11,11 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="46dp"
         android:background="@color/colorPrimary"
         android:elevation="4dp"
         android:fitsSystemWindows="true"
-        android:minHeight="?attr/actionBarSize"
-        android:paddingLeft="12dp"
-        android:paddingRight="12dp"
+        android:paddingRight="15dp"
         android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:titleTextColor="@color/c8"
         app:layout_scrollFlags="scroll|enterAlways"
@@ -24,13 +23,14 @@
         app:theme="@style/Theme.AppCompat.NoActionBar">
 
         <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/tv_title"
+            android:id="@+id/title"
             style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:ellipsize="end"
             android:lines="1"
+            android:textSize="@dimen/t2"
             android:titleTextColor="@color/c8"
             tools:text="center text"/>
 
