--- a/core/src/main/res/layout/vdp_toolbar.xml
+++ b/core/src/main/res/layout/vdp_toolbar.xml
@@ -11,12 +11,12 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="46dp"
+        android:layout_height="@dimen/py_actionbar_height"
         android:background="@color/colorPrimary"
         android:elevation="4dp"
         android:fitsSystemWindows="true"
         android:paddingRight="15dp"
-        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:popupTheme="@style/ToolbarPopupTheme"
         android:titleTextColor="@color/c8"
         app:layout_scrollFlags="scroll|enterAlways"
         app:navigationIcon="?attr/homeAsUpIndicator"
