--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -1,15 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <!--状态栏颜色-->
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <!--控制各个控件被选中时的颜色-->
         <item name="colorAccent">@color/colorAccent</item>
+        <!-- 设置点击波纹效果颜色 -->
+        <item name="android:colorControlHighlight" tools:targetApi="lollipop">@color/c1</item>
+        <!--页面背景色-->
+        <item name="android:windowBackground">@color/c7</item>
+        <!--底部导航栏颜色-->
+        <item name="android:navigationBarColor" tools:targetApi="lollipop">@color/c3</item>
+        <!--Appbar背景色-->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <!--ToolBar上的Title颜色-->
+        <item name="android:textColorPrimary">@color/c8</item>
+        <!--各个控制控件的默认颜色-->
+        <item name="android:colorControlNormal" tools:targetApi="lollipop">@color/c8</item>
+        <!-- 不使用系统actionbar -->
         <item name="windowActionBar">false</item>
+        <!-- 无标题栏 -->
         <item name="android:windowNoTitle">true</item>
+        <!-- 字体样式 -->
         <item name="android:typeface">monospace</item>
+        <!-- actionbar样式 -->
+        <item name="android:actionBarStyle">@style/normal_actionbar_style</item>
+        <!-- menu样式 -->
+        <item name="actionOverflowMenuStyle">@style/OverFlowMenu</item>
     </style>
+
+    <!-- ActionBar样式 -->
+    <style name="normal_actionbar_style" parent="Widget.AppCompat.ActionBar.Solid">
+        <item name="background">?attr/colorPrimary</item>
+        <item name="backgroundStacked">?attr/colorPrimary</item>
+        <item name="backgroundSplit">?attr/colorPrimary</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="elevation" tools:targetApi="lollipop">0dp</item>
+        <item name="actionBarSize">@dimen/py_actionbar_height</item>
+        <item name="android:actionBarSize">@dimen/py_actionbar_height</item>
+        <item name="height">@dimen/py_actionbar_height</item>
+        <item name="contentInsetStart">0dp</item>
+        <item name="contentInsetEnd">0dp</item>
+    </style>
+
+    <!-- ActionBar样式 -->
+    <style name="ToolbarPopupTheme" parent="ThemeOverlay.AppCompat.Dark">
+        <item name="actionOverflowMenuStyle">@style/OverFlowMenu</item>
+    </style>
+
+    <!-- Menu样式 -->
+    <style name="OverFlowMenu" parent="Widget.AppCompat.PopupMenu.Overflow">
+        <item name="android:windowDisablePreview">true</item>
+        <item name="overlapAnchor">false</item>
+        <item name="android:overlapAnchor" tools:targetApi="lollipop">false</item>
+        <item name="android:popupBackground">@null</item>
+        <item name="android:dropDownWidth">wrap_content</item>
+        <item name="android:dropDownVerticalOffset">80.0dp</item>
+        <item name="android:dropDownHorizontalOffset">5.0dp</item>
+    </style>
+
 
 </resources>
